--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <nav class="bg-white border-gray-200 dark:bg-gray-800">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://kishor-irnak.github.io/Portfolio/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="logo.png" class="h-8" alt="Flowbite Logo" />
+      <img src="dark.png" alt="Logo" class="logo-light h-7 hidden dark:block">
+      <img src="logo.png" alt="Logo" class="logo-dark block h-7 dark:hidden">
+
         <span class="self-center text-2xl font-bold tracking-tight whitespace-nowrap dark:text-white">Kishor</span>
     </a> <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
         <button type="button" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
