--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your message</label>
         <textarea id="message" rows="4" name="message" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Your message..."></textarea>
      </div>
-    
      <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 block">Send message</button>
-     <input type="hidden" name="_next" value="https://kishor-irnak.github.io/Portfolio/#">
   </form>
   <p class="mb-2 text-sm text-gray-500 dark:text-gray-400">
      <a href="#" class="hover:underline">kishorirnak4u@gmail.com</a>
@@ -281,6 +279,68 @@
           </div>
       </div>
   </div>
+</section>
+
+
+<section class="bg-white dark:bg-gray-900">
+  <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
+      
+<div class="grid  mb-8 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 md:mb-12 md:grid-cols-2 bg-white dark:bg-gray-800">
+  <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e dark:bg-gray-800 dark:border-gray-700">
+      <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Very easy this was to integrate</h3>
+          <p class="my-4">If you care for your time, I hands down would go with this."</p>
+      </blockquote>
+      <figcaption class="flex items-center justify-center ">
+          <img class="rounded-full w-9 h-9" src="4.png" alt="profile picture">
+          <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+              <div>Bonnie Green</div>
+              <div class="text-sm text-gray-500 dark:text-gray-400 ">Developer at Open AI</div>
+          </div>
+      </figcaption>    
+  </figure>
+  <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
+      <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Solid foundation for any project</h3>
+          <p class="my-4">Designing with Figma components that can be easily translated to the utility classes of Tailwind CSS is a huge timesaver!"</p>
+      </blockquote>
+      <figcaption class="flex items-center justify-center ">
+          <img class="rounded-full w-9 h-9" src="3.png" alt="profile picture">
+          <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+              <div>Roberta Casas</div>
+              <div class="text-sm text-gray-500 dark:text-gray-400">Lead designer at Dropbox</div>
+          </div>
+      </figcaption>    
+  </figure>
+  <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-b border-gray-200 md:rounded-es-lg md:border-b-0 md:border-e dark:bg-gray-800 dark:border-gray-700">
+      <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Mindblowing workflow</h3>
+          <p class="my-4">Aesthetically, the well designed components are beautiful and will undoubtedly level up your next application."</p>
+      </blockquote>
+      <figcaption class="flex items-center justify-center ">
+          <img class="rounded-full w-9 h-9" src="2.png" alt="profile picture">
+          <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+              <div>Jese Leos</div>
+              <div class="text-sm text-gray-500 dark:text-gray-400">Software Engineer at Facebook</div>
+          </div>
+      </figcaption>    
+  </figure>
+  <figure class="flex flex-col items-center justify-center p-8 text-center bg-white border-gray-200 rounded-b-lg md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
+      <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Efficient Collaborating</h3>
+          <p class="my-4">You have many examples that can be used to create a fast prototype for your team."</p>
+      </blockquote>
+      <figcaption class="flex items-center justify-center ">
+          <img class="rounded-full w-9 h-9" src="1.png" alt="profile picture">
+          <div class="space-y-0.5 font-medium dark:text-white text-left rtl:text-right ms-3">
+              <div>Joseph McFall</div>
+              <div class="text-sm text-gray-500 dark:text-gray-400">CTO at Google</div>
+          </div>
+      </figcaption>    
+  </figure>
+</div>
+</div>
+
 </section>
 
 
