--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
           <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Skills</a>
+          <a href="#skills" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Skills</a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Project</a>
+          <a href="#project" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Project</a>
         </li>
         <li>
           <a href="contact.html" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-70 ">Contact</a>
@@ -161,7 +161,7 @@
         </div>
       </div>
       
-<section class="bg-white dark:bg-gray-900">
+<section id="#project" class="bg-white dark:bg-gray-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
       <div class="bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg p-8 md:p-12 mb-8">
 
@@ -169,29 +169,29 @@
           <li class="relative mb-6 sm:mb-0">
               <div class="flex items-center">
                   <div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
-                      <svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                          <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
+                      <svg class="w-4 h-4 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                       <path d="M8 3a3 3 0 0 0-1 5.83v6.34a3.001 3.001 0 1 0 2 0V15a2 2 0 0 1 2-2h1a5.002 5.002 0 0 0 4.927-4.146A3.001 3.001 0 0 0 16 3a3 3 0 0 0-1.105 5.79A3.001 3.001 0 0 1 12 11h-1c-.729 0-1.412.195-2 .535V8.83A3.001 3.001 0 0 0 8 3Z"/>
                       </svg>
                   </div>
                   <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
               </div>
               <div class="mt-3 sm:pe-8">
-                  <h3 class="text-lg font-semibold text-gray-900 dark:text-white"><a href=" https://kishor-irnak.github.io/Doodu/">Doodu webapp v1.0.1</a></h3>
-                  <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on May 27, 2024</time>
-                  <p class="text-base font-normal text-gray-500 dark:text-gray-400">Doodu is webapp which helps to represents our thought digitaly.</p>
+                  <h3 class="text-lg font-semibold text-blue-500 dark:text-blue-500"><a href="https://kishor-irnak.github.io/SAAS_landing-page/" target="_blank">SAAS landing page v1.0.1</a></h3>
+                  <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on June 04, 2025</time>
+                  <p class="text-base font-normal text-gray-500 dark:text-gray-400">Attender is webapp which helps to Manage attendance,result and data.</p>
               </div>
           </li>
           <li class="relative mb-6 sm:mb-0">
               <div class="flex items-center">
                   <div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
-                      <svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                          <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
+                      <svg class="w-4 h-4 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                       <path d="M8 3a3 3 0 0 0-1 5.83v6.34a3.001 3.001 0 1 0 2 0V15a2 2 0 0 1 2-2h1a5.002 5.002 0 0 0 4.927-4.146A3.001 3.001 0 0 0 16 3a3 3 0 0 0-1.105 5.79A3.001 3.001 0 0 1 12 11h-1c-.729 0-1.412.195-2 .535V8.83A3.001 3.001 0 0 0 8 3Z"/>
                       </svg>
                   </div>
                   <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
               </div>
               <div class="mt-3 sm:pe-8">
-                  <h3 class="text-lg font-semibold text-gray-900 dark:text-white"><a href="https://kishor-irnak.github.io/StuddyBuddy/">StuddyBuddy v1.2.0</a></h3>
+                  <h3 class="text-lg font-semibold text-blue-500 dark:text-blue-500"><a href="https://kishor-irnak.github.io/StuddyBuddy/">StuddyBuddy v1.2.0</a></h3>
                   <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on may 3, 2024</time>
                   <p class="text-base font-normal text-gray-500 dark:text-gray-400">it is concept app for students doubt solving.</p>
               </div>
@@ -199,14 +199,14 @@
           <li class="relative mb-6 sm:mb-0">
               <div class="flex items-center">
                   <div class="z-10 flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full ring-0 ring-white dark:bg-blue-900 sm:ring-8 dark:ring-gray-900 shrink-0">
-                      <svg class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                          <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
+                      <svg class="w-4 h-4 text-blue-800 dark:text-blue-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                       <path d="M8 3a3 3 0 0 0-1 5.83v6.34a3.001 3.001 0 1 0 2 0V15a2 2 0 0 1 2-2h1a5.002 5.002 0 0 0 4.927-4.146A3.001 3.001 0 0 0 16 3a3 3 0 0 0-1.105 5.79A3.001 3.001 0 0 1 12 11h-1c-.729 0-1.412.195-2 .535V8.83A3.001 3.001 0 0 0 8 3Z"/>
                       </svg>
                   </div>
                   <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
               </div>
               <div class="mt-3 sm:pe-8">
-                  <h3 class="text-lg font-semibold text-gray-900 dark:text-white"><a href="https://kishor-irnak.github.io/TEXT-2-VOICE-CONVERTER/">Text-to-Speech v1.3.0</a></h3>
+                  <h3 class="text-lg font-semibold text-blue-500 dark:text-blue-500"><a href="https://kishor-irnak.github.io/TEXT-2-VOICE-CONVERTER/">Text-to-Speech v1.3.0</a></h3>
                   <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Released on January 5, 2022</time>
                   <p class="text-base font-normal text-gray-500 dark:text-gray-400">It is text to speech converter based on javascript.</p>
               </div>
@@ -263,13 +263,17 @@
                 <div class="w-full bg-gray-200 rounded-full h-2.5 mb-4 dark:bg-gray-700">
                <div class="bg-blue-600 h-2.5 rounded-full" style="width: 55%"></div>
               </div>
-              <div class="mb-1 text-base font-medium text-yellow-700 dark:text-yellow-500">javascript</div>
+              <div class="mb-1 text-base font-medium text-yellow-300 dark:text-yellow-300">javascript</div>
                  <div class="w-full bg-gray-200 rounded-full h-2.5 mb-4 dark:bg-gray-700">
-                 <div class="bg-yellow-400 h-2.5 rounded-full" style="width: 45%"></div>
+                 <div class="bg-yellow-300 h-2.5 rounded-full" style="width: 45%"></div>
                 </div>
-                <div class="mb-1 text-base font-medium text-indigo-700 dark:text-indigo-500">C Programming</div>
+                <div class="mb-1 text-base font-medium text-gray-100 dark:text-gray-100">C Programming</div>
                <div class="w-full bg-gray-200 rounded-full h-2.5 mb-4 dark:bg-gray-700">
-                <div class="bg-indigo-600 h-2.5 rounded-full dark:bg-indigo-500" style="width: 90%"></div>
+                <div class="bg-gray-100 h-2.5 rounded-full dark:bg-gray-100" style="width: 90%"></div>
+                </div>
+                  <div class="mb-1 text-base font-medium text-yellow-400 dark:text-yellow-400">Java</div>
+               <div class="w-full bg-gray-200 rounded-full h-2.5 mb-4 dark:bg-gray-700">
+                <div class="bg-yellow-400 h-2.5 rounded-full dark:bg-yellow-400" style="width: 90%"></div>
                 </div>
               <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">Read more
                   <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
